Fix title clipping

--- a/src/app/stories/_stories.gallery.styl
+++ b/src/app/stories/_stories.gallery.styl
@@ -36,7 +36,7 @@
     padding: 0 10px 0px;
     z-index: 11;
     color: inherit;
-    max-height: 42px;
+    max-height: 48px;
 
     a {
       color: inherit;
