--- a/src/app/stories/_stories.partial.styl
+++ b/src/app/stories/_stories.partial.styl
@@ -10,7 +10,7 @@ section.story {
   h3 {
     font-size: 16px; // TODO
     line-height: 21px;
-    max-height: 42px;
+    max-height: 48px;
     overflow: hidden;
     font-weight: 400;
 
